force-app/main/default/objects/Activity__c/Activity__c.object-meta.xml
<CustomObject>
    <description>Custom object to hold information about activities that will be part of trainings and related to employees</description>
    <label>Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>