force-app/main/default/objects/Activity__c/fields/No_of_Trainings__c.field-meta.xml
<CustomField>
    <fullName>No_of_Trainings__c</fullName>
    <description>Number of trainings this activity is part of</description>
    <label>No. of Trainings</label>
    <summaryForeignKey>Training_Activity__c.Activity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>