force-app/main/default/objects/Activity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
            <value>
                <fullName>Exam</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Google Meet</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Session</fullName>
            </value>
            <value>
                <fullName>Stand and Deliver</fullName>
            </value>
            <value>
                <fullName>Superbadge</fullName>
            </value>
            <value>
                <fullName>TED</fullName>
            </value>
            <value>
                <fullName>Trail</fullName>
            </value>
            <value>
                <fullName>Trailmix</fullName>
            </value>
            <value>
                <fullName>Webassessor</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>